# microsim360

./: CMakeLists.txt  LICENSE  Readme.md
cmake/: FindCppcheck.cmake
src/: CMakeLists.txt  ckd.c  conf.c  conf.h  config.h.in  ctest.h  event.c  event.h  fp30.c  layout.c  logger.c  logger.h  main.c
src/device/: CMakeLists.txt  bin2c.c  card.c  card.h  cpu.c  cpu.h  dasd.c  dasd.h  device.c  device.h  disassem.c  gen_tape_position.c  panel.c  panel.h  tape.c  tape.h  tp.c  xlat.c  xlat.h
src/device/test/: card_test.c  ctest_main.c  device_test.c  tape_test.c
src/image/: hex_dial_img.xpm  lamps_img.xpm  store_dials_img.xpm  switch_img.xpm  tape_medium.xpm  tape_reel.xpm
src/model1052/: CMakeLists.txt  model1052.c  model1052.h
src/model1442/: CMakeLists.txt  model1442.c  model1442.h  model1442.xpm  panel1442.c
src/model1442/test/: model1442_test.c
src/model1443/: CMakeLists.txt  model1442.xpm  model1443.c  model1443.h  model1443.xpm  panel1443.c
src/model1443/test/: model1443_test.c
src/model2030/: CMakeLists.txt  a.out  ccros20100715.txt  ccros20120318.txt  ccros2030.txt  cpu2030.c  cros2030.c  model1050.c  model1050.h  model2030.c  model2030.h  model2030_ros.c  panel.c  panel2030.c  pr_cros30.c
src/model2030/fp/: notes.txt
src/model2030/test/: ctest_main.c  io_test.c  model1052.h  model2030_test.c  model_test.h
src/model2050/: CMakeLists.txt  cpu2050.c  cros2050.c  model2050.h  model2050_ros.c  panel2050.c  rollers2050.c  rollers2050.h  ros.txt
src/model2050/images/: rollers.xpm
src/model2050/test/: ctest_main.c  io_test.c  model2050_test.c  model_test.h
src/model2065/: CMakeLists.txt  cpu2065.c  cros2065.c  model2065.h  model2065_ros.c  ros(clean).txt  ros.txt  ros65.txt
src/model2065/test/: ctest_main.c  model2065_test.c
src/model2415/: CMakeLists.txt  model2415.c  model2415.h  model2415.xpm  panel2415.c
src/model2415/test/: model2415_test.c
src/model2841/: CMakeLists.txt  cros2841.c  model2311.xpm  model2841.c  model2841.h  model2841_ros.c  panel2841.c  ros.txt
src/model2841/test/: ctest_main.c  disk_test.c
src/model2844/: CMakeLists.txt  cros2844.c  model2314.xpm  model2844.c  model2844.h  model2844_ros.c  model2844_ros.txt  panel2844.c  pr_cros2841.c
src/model2844/test/: ctest_main.c  disk_test.c
src/panel/: CMakeLists.txt  area.c  area.h  button.c  button.h  checkbox.c  checkbox.h  combo.c  combo.h  dial.c  dial.h  hex_dial.c  hex_dial.h  indicator.c  indicator.h  label.c  label.h  lamp.c  lamp.h  lamp_data.c  lamp_data.h  lamp_row.c  lamp_row.h  light.c  light.h  line.c  line.h  number.c  number.h  panel.c  panel.h  panel_device.c  panel_device.h  reg_row.c  reg_row.h  roller.c  roller.h  ros_row.c  ros_row.h  store_dial.c  (+8 more)
src/test/: CMakeLists.txt  chan_test.c  chan_test.h  ctest_main.c  dev_test.c  event_test.c  inst_test_cases.h  io_test.c  mul_io_test.c  sel_test.c  sim_test.c  test_chan.c  test_chan.h  test_device.back  test_device.c  test_device.h
test_progs/: crd2consl.deck  crd2consl.ipl  demo_asm.jcl  demo_cobol.jcl  demo_fort.jcl  demo_rpg.jcl  diag1.tap  dserv.jcl  echo.deck  hello.deck  sysgen_ms.jcl  sysres.tap  sysres_ms.tap  sysres_ss.tap  test30.cfg  test30_diag.cfg  test30_ss.cfg  test50.cfg  test50_diag.cfg  test50_ss.cfg
